@@ -1,3 +1,10 @@
+2005-04-25  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b14)
+
+	* Added support for the applet to force the version of Gallery
+	  it's embedded in, to overcome instances of Apache sending
+	  a 200 error code even though gallery_remote2.php doesn't exist
+	  instead of 404 (in G2).
+
 2005-04-22  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b13)
 
 	* Fixed error message for self-signed cert to point to GR documentation.
